src/test/ui/feature-gate-extern_prelude.stderr
error: expected one of `!` or `::`, found `-`
  --> $DIR/feature-gate-extern_prelude.rs:11:4
   |
LL | can-only-test-this-in-run-make-fulldeps //~ ERROR expected one of `!` or `::`, found `-`
   |    ^ expected one of `!` or `::` here

error: aborting due to previous error

